# -alpha60-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bootstrap_repository.sh  pyproject.toml  requirements.txt
dbt/alpha60/: profiles.yml
docs/architecture/: overview.md
docs/architecture/decisions/: adr-0001-project-structure.md
src/alpha60/: cli.py  state.py
src/alpha60/config/: bigquery.py  settings.py  shopify.py
src/alpha60/core/: __init__.py  logging.py
src/alpha60/jobs/: daily_refresh_runner.py  result.py  shopify_customers.py  shopify_customers_runner.py  shopify_inventory_levels.py  shopify_inventory_levels_runner.py  shopify_locations.py  shopify_locations_runner.py  shopify_orders.py  shopify_orders_runner.py  shopify_products.py  shopify_products_runner.py
src/alpha60/operations/: health.py
src/alpha60/pipelines/: daily_refresh.py  dbt_pipeline.py
src/alpha60/transformations/: runner.py  shopify_inventory_levels.py  shopify_inventory_levels_runner.py  shopify_locations.py  shopify_locations_runner.py  shopify_order_lines.py  shopify_order_lines_runner.py  shopify_orders.py  shopify_orders_runner.py  shopify_products.py  shopify_products_runner.py
src/alpha60/warehouse/: job.py  loader.py
tests/unit/: test_cli.py  test_config_models.py  test_daily_refresh_pipeline.py  test_daily_refresh_runner.py  test_dbt_pipeline.py  test_settings.py  test_shopify_locations_job.py  test_shopify_orders_job.py  test_shopify_orders_runner.py  test_shopify_products_job.py  test_shopify_products_runner.py  test_state.py
(+60 files in other folders)
